--- a/index.ipynb
+++ b/index.ipynb
@@ -110,11 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = ['-34.6037]"
+    "ba_latitude = ['-34.6037']"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = [-58.3816]"
+    "ba_longitude = ['-58.3816']"
    ]
   },
   {
