--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = ['-34.6037']"
+    "ba_latitude = '-34.6037'"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = ['-58.3816']"
+    "ba_longitude = ['-58.3816'"
    ]
   },
   {
