--- a/index.ipynb
+++ b/index.ipynb
@@ -110,20 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = ('-34.6037"
+    "ba_latitude = -34.6037"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = '-58.3816'"
+    "ba_longitude = -58.3816"
    ]
   },
   {
