Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -404,7 +404,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = None"
+    "la_boca_marker = marker"
    ]
   },
   {
