--- a/index.ipynb
+++ b/index.ipynb
@@ -400,11 +400,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = marker"
+    "la_boca_marker = marker_six"
    ]
   },
   {
