--- a/index.ipynb
+++ b/index.ipynb
@@ -469,9 +469,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(neighborhood_markers)) # 5\n",
     "print(neighborhood_markers[-1] == marker_five) # True"
